Download driver based on installed chrome version.